tests/baselines/reference/classWithMultipleBaseClasses.errors.txt
==== tests/cases/compiler/classWithMultipleBaseClasses.ts (1 errors) ====
    class A {
        foo() { }
    }
    
    class B {
        bar() { }
    }
    
    interface I {
        baz();
    }
    
    interface J {
        bat();
    }
    
    
    class D implements I, J {
          ~
!!! classWithMultipleBaseClasses.ts(18,7): error TS2137: Class D declares interface I but does not implement it:
!!! 	Type 'D' is missing property 'foo' from type 'I'.
        baz() { }
        bat() { }
    }
    
    interface I extends A, B {
    }